smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace/namespace-multiple-lines.smithy
// Syntax error at line 3, column 14: Expected IDENTIFIER but found COMMENT('// Spaces are fine. The comment is fine. But the newline is not fine.\n') | Model
$version: "2.0"
namespace    // Spaces are fine. The comment is fine. But the newline is not fine.
com.foo
